# HoloDopplerPython

./: .gitignore  LICENSE  README.md  build_installer.py  holodoppler.example.lprof  main.py  profile_output.prof  pyproject.toml
parameters/: default_parameters.json  default_parameters_cine.json  default_parameters_debug.json  default_parameters_lightest.json  idea.yaml  idea2.yaml
scripts/: analyse_zernike_signals.py  example.py  example_batch.py  example_cine.py  example_debug.py  example_lightest.py  preview.py
src/holodoppler/: Holodoppler.py  __init__.py  __main__.py  backend.py  cli.py  config.py  default_outputs.json  default_parameters.json  default_parameters_cine.json  default_parameters_debug.json  default_parameters_lightest.json  example cine.py  example copy.py  example.py  example_batch.py  example_cine.py  example_cine_preview.py  example_debug.py  example_lightest.py  example_preview.py  examplecopy.py  file_io.py  filtering.py  moments.py  plotting.py  preview.py  preview_list.py  propagation.py  registration.py  runner.py  shack_hartmann.py  ui.py  utils.py  zernike.py
src/holodoppler/rng/: display_zernike.py
src/holodoppler/settings/: __init__.py  default_parameters.json
src/holodoppler/tests/: test.py  test_config_and_runner.py
src/holodoppler/utils/: kernels_calculation.py  moments.py  plotting.py  process.py  propagation.py  reading.py  registration.py  render.py  shack_hartmann.py  svd_filtering.py
tests/: old_test.py
