[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "holodoppler"
version = "0.1.0"
description = "Holodoppler processing toolkit with CLI and Tkinter UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.3.4",
  "tqdm>=4.67.1",
  "matplotlib>=3.10.7",
  "scipy>=1.17.0",
  "h5py",
  "opencv-python",
  "cinereader>=1.4.3",
  "cupy-cuda13x>=14.0.1",
  "lblprof>=0.1.8",
  "sv-ttk>=2.6.1",
]

[project.scripts]
holodoppler = "holodoppler.cli:main"
holodoppler-ui = "holodoppler.ui:launch_app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
holodoppler = ["settings/*.json"]
