[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holodoppler"
version = "0.11.0"
description = "HoloDoppler processing and preview tools."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.3.4",
  "tqdm>=4.67.1",
  "matplotlib>=3.10.7",
  "scipy>=1.17.0",
  "h5py",
  "opencv-python",
  "cinereader>=1.4.3",
  "cupy-cuda13x>=14.0.1",
  "lblprof>=0.1.8",
  "imageio>=2.37.3",
  "tkinterdnd2",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
holodoppler = "holodoppler.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
holodoppler = ["py.typed"]

[tool.pyinstaller]
name = "HoloDoppler"
